1.9/manifests/random-logger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-logger-svc
spec:
  type: ClusterIP
  selector:
    app: random-logger
  ports:
    - port: 80
      targetPort: 8080
